# istmr

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
data/: content-images.xlsx  data.csv  models.xlsx
istmr/: dataset.py  models.py  utils.py
