[project]
name = "istmr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "civitai-py>=0.1.10",
    "curl-cffi>=0.11.4",
    "diffusers>=0.33.1",
    "fake-useragent>=2.2.0",
    "gcsfs>=2025.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "pillow>=11.2.1",
    "pytorch-lightning>=2.5.1.post0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "typer>=0.16.0",
]
